// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input is not ISO8601 date 1`] = `
<Valle(Input)
  isISO8601={true}
>
  <Input
    message="Hi is not a valid ISO 8601 date. Please check your value and try again."
    valid={false}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div>
        Hi is not a valid ISO 8601 date. Please check your value and try again.
      </div>
    </div>
  </Input>
</Valle(Input)>
`;

exports[`It sould be valid if input is ISO8601 date 1`] = `
<Valle(Input)
  isISO8601={true}
>
  <Input
    message=""
    valid={true}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div />
    </div>
  </Input>
</Valle(Input)>
`;
